Dont use opacity for silenced text

--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-text: #e5e5e5;
-    --color-text-silenced: rgba(229, 229, 229, 0.2);
+    --color-text-silenced: #59595A;
     --color-background: #1e1f20;
   }
 }
