Use more contrast orange on dark theme

--- a/public/global.css
+++ b/public/global.css
@@ -12,6 +12,7 @@
     --color-text: #e5e5e5;
     --color-text-silenced: #59595A;
     --color-background: #1e1f20;
+    --color-link-hover: #ff782b;
   }
 }
 
