--- a/global.css
+++ b/global.css
@@ -1,18 +1,19 @@
 :root {
-    --color-text: black;
-    --color-text-silenced: rgba(0, 0, 0, 0.3);
-    --color-link-border: var(--color-text-silenced);
-    --color-link-hover: #FF5C00;
-    --color-link-hover-border: rgba(255, 92, 0, 0.3);
-    --color-background: white;
+  --color-text: black;
+  --color-text-silenced: rgba(0, 0, 0, 0.3);
+  --color-link-border: var(--color-text-silenced);
+  --color-link-hover: #FF5C00;
+  --color-link-hover-border: rgba(255, 92, 0, 0.3);
+  --color-background: white;
 }
 
 @media (prefers-color-scheme: dark) {
-    :root {
-        --color-text: #e5e5e5;
-        --color-text-silenced: rgba(229, 229, 229, 0.2);
-        --color-background: #1e1f20;
-    }
+  :root {
+    --color-text: #e5e5e5;
+    --color-text-silenced: #59595A;
+    --color-background: #1e1f20;
+    --color-link-hover: #ff782b;
+  }
 }
 
 html, body {
@@ -20,10 +21,10 @@ html, body {
 }
 
 body {
-    min-width: 900px;
+  min-width: 900px;
 	margin: 0;
 	box-sizing: border-box;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
-    background-color: var(--color-background);
-    color: var(--color-text)
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  background-color: var(--color-background);
+  color: var(--color-text)
 }
