--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
   --color-text: black;
   --color-text-silenced: rgba(0, 0, 0, 0.3);
   --color-link-border: var(--color-text-silenced);
-  --color-link-hover: #FF5C00;
+  --color-link-hover: #ff5c00;
   --color-link-hover-border: rgba(255, 92, 0, 0.3);
   --color-background: white;
 }
@@ -10,21 +10,22 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-text: #e5e5e5;
-    --color-text-silenced: #59595A;
+    --color-text-silenced: #59595a;
     --color-background: #1e1f20;
     --color-link-hover: #ff782b;
   }
 }
 
-html, body {
-	position: relative;
+html,
+body {
+  position: relative;
 }
 
 body {
   min-width: 900px;
-	margin: 0;
-	box-sizing: border-box;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   background-color: var(--color-background);
-  color: var(--color-text)
+  color: var(--color-text);
 }
